# NetSSPI

./: .gitignore  CMakeLists.txt  netsspi.c  netsspi.h
client/: CMakeLists.txt  netsspi_client.c  netsspi_client.def
server/: .gitignore  CMakeLists.txt  netsspi_server.c
